# ktk-discord-bots

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  assign_groups.py  balance_change.py  birthday.py  bot.py  club.py  config.py.template  docker-compose.yml  google_client.py  group_config.py.template  nickname_emoji.py  notifications.py  player.py  populate_song_links.py  pyproject.toml  quote.py  requirements-dev.in  requirements.in  requirements.txt  song.py  songs.json  songs.json.template  streque.py  veckomejl.py  voice.py
bot/: assign_groups.py  balance_change.py  birthday.py  bot.py  club.py  nickname_emoji.py  notifications.py  player.py  potato.py  quote.py  song.py  veckomejl.py
bot/clients/: google.py  rotary_phone.py  streque.py
bot/scripts/: google_creds.py  populate_song_links.py  rotary_phone_util.py
docs/: DEPLOYMENT.md
tests/: conftest.py  test_assign_groups.py  test_balance_change.py  test_birthday.py  test_clients_google.py  test_clients_rotary_phone.py  test_clients_streque.py  test_club.py  test_nickname_emoji.py  test_notifications.py  test_player.py  test_potato.py  test_quote.py  test_song.py  test_veckomejl.py
