[project]
name = "ktk-discord-bots"
version = "0.1.0"
description = "KTK's Discord bots: Streque and Körbot"
requires-python = ">=3.10"
dependencies = [
    # Discord bot framework, fork of discord.py.
    "py-cord",

    # Needed to send audio to Discord.
    "pynacl",

    # For scheduling tasks to run periodically.
    "aiocron",

    # For making HTTP requests to Streque.
    "aiohttp[speedups]",

    # For subscribing to events from Streque.
    "python-socketio[asyncio-client]",

    # Used to interface with Google APIs in the bot code.
    "aiogoogle",

    # Only needed for the google_creds.py script, used to fetch the Google
    # account credentials.
    "google-api-python-client",
    "google-auth-oauthlib",
]

[dependency-groups]
dev = [
    # Test runner.
    "pytest",

    # Async test support (the bot code is asyncio based).
    "pytest-asyncio",

    # Mocking aiohttp requests in the client tests.
    "aioresponses",

    # aioresponses (as of 0.7.9) is incompatible with aiohttp >= 3.14.
    "aiohttp<3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
